--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "canvas": "^2.6.1",
     "cheerio": "^1.0.0-rc.2",
     "ejs": "^2.5.7",
     "express": "^4.17.1",
+    "jsdom": "^15.2.1",
     "node-schedule": "^1.2.5",
     "nodemailer": "^4.4.0",
     "superagent": "^3.8.1"
